# HMS

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  README_VENDOR_DEPLOY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.aaaSCRIPT/: run_benchmark.sh
core/daemon/: README.md  pyproject.toml  test.sh
core/daemon/hms_embed/: __init__.py  cli.py  daemon_client.py  daemon_embed_manager.py  embed_manager.py  profile_manager.py
core/daemon/tests/: __init__.py  test_daemon_client.py  test_embed_manager.py  test_profile_daemon_config.py  test_profile_integration.py  test_profile_manager.py
core/dataplane/: pyproject.toml  test_modular_search.py
core/dataplane-full/: README.md  pyproject.toml
core/dataplane/hms_api/: __init__.py  _vector_index.py  banner.py  config.py  config_resolver.py  daemon.py  db_url.py  main.py  mcp_local.py  mcp_tools.py  metrics.py  migrations.py  pg0.py  server.py  tracing.py
core/dataplane/tests/: conftest.py  e2e_oracle_smoke.py  test_admin_backup_restore.py  test_agents_api.py  test_alembic_dag.py  test_async_batch_retain.py  test_async_retain_tags.py  test_audit_log.py  test_bank_stats.py  test_bank_template_configurable_fields.py  test_bank_templates.py  test_base_path.py  test_batch_api.py  test_batch_api_integration.py  test_batch_api_validation.py  test_batch_chunking.py  test_causal_comprehensive.py  test_causal_relations.py  test_causal_relationships.py  test_causal_strategies.py  test_chunk_storage_upsert.py  test_chunking.py  test_codex_tool_choice.py  test_cohere_cross_encoder.py  test_combined_scoring.py  test_config_validation.py  test_consolidation.py  test_consolidation_failure_recovery.py  test_consolidation_retry_budget.py  test_consolidation_round_limit.py  test_custom_embedding_dimension.py  test_daemon_host_resolution.py  test_daemonize.py  test_db_abstraction.py  test_db_url.py  test_deepseek_tool_call_compat.py  test_delta_editorial_fusion.py  test_delta_retain.py  test_delta_retain_duplicates.py  test_document_chunks_and_reprocess.py  (+112 more)
core/local-suite/: README.md  pyproject.toml
core/local-suite-slim/: pyproject.toml
core/local-suite/hms/: __init__.py  api_namespaces.py  client_wrapper.py  embedded.py  server.py
core/local-suite/tests/: README.md  __init__.py  test_cleanup_timeout.py  test_embedded.py  test_embedded_namespaces.py  test_server_integration.py
deploy/charts/hms/: Chart.yaml  README.md  values.yaml
deploy/containers/: test-image.sh  test-slim-local.sh
deploy/containers/standalone/: Dockerfile  start-all.sh
docker/: hms-api.Dockerfile  hms-vendor-gateway.Dockerfile  nginx.conf  nginx.tls.example.conf
docs/: benchmark_case_replay.html  memory_pipeline_demo.html
docs/integrations/: MCP.md
examples/automatic_memory/: openai_responses.py
examples/outputs/: store_errands_visual.html
interface/adapters/ag2/: README.md  pyproject.toml
interface/adapters/ag2/hms_ag2/: __init__.py  _client.py  config.py  errors.py  tools.py
interface/adapters/ag2/tests/: test_tools.py
interface/adapters/agentcore/: README.md  pyproject.toml
interface/adapters/agentcore/examples/: basic_runtime_handler.py
interface/adapters/agentcore/hms_agentcore/: __init__.py  adapter.py  bank.py  config.py  errors.py
interface/adapters/agentcore/tests/: test_adapter.py  test_bank.py  test_config.py  test_live_integration.py
interface/adapters/agno/: README.md  pyproject.toml
interface/adapters/agno/hms_agno/: __init__.py  config.py  errors.py  tools.py
interface/adapters/agno/tests/: test_config.py  test_tools.py
interface/adapters/autogen/: README.md  pyproject.toml
interface/adapters/autogen/hms_autogen/: __init__.py  _client.py  config.py  errors.py  tools.py
interface/adapters/autogen/tests/: test_tools.py
interface/adapters/crewai/: README.md  pyproject.toml  test_manual.py
interface/adapters/crewai/hms_crewai/: __init__.py  _compat.py  config.py  errors.py  storage.py  tools.py
interface/adapters/crewai/tests/: test_config.py  test_storage.py  test_tools.py
interface/adapters/dify/: LICENSE  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
interface/adapters/dify/provider/: hms.py  hms.yaml
interface/adapters/dify/tests/: test_helpers.py  test_provider.py
interface/adapters/dify/tools/: _client.py  recall.py  recall.yaml  reflect.py  reflect.yaml  retain.py  retain.yaml
interface/adapters/litellm/: README.md  pyproject.toml
interface/adapters/litellm/hms_litellm/: __init__.py  callbacks.py  config.py  wrappers.py
interface/adapters/litellm/tests/: __init__.py  test_config.py  test_integration.py
interface/adapters/llamaindex/: README.md  pyproject.toml
interface/adapters/llamaindex/hms_llamaindex/: __init__.py  _client.py  config.py  errors.py  memory.py  tools.py
interface/adapters/llamaindex/tests/: test_manual.py  test_memory.py  test_tools.py
interface/adapters/pydantic-ai/: README.md  pyproject.toml
interface/adapters/pydantic-ai/hms_pydantic_ai/: __init__.py  config.py  errors.py  tools.py
interface/adapters/pydantic-ai/tests/: test_config.py  test_tools.py
interface/adapters/smolagents/: README.md  pyproject.toml
interface/adapters/smolagents/hms_smolagents/: __init__.py  config.py  errors.py  tools.py
interface/adapters/smolagents/tests/: test_config.py  test_tools.py
interface/cli/: .openapi-coverage.toml  Cargo.toml  build.sh  smoke-test.sh
interface/console/: package.json
lab/evaluation/: pyproject.toml
scripts/: generate_keys.sh  run_memory_demo.sh  smoke_test.sh  start.sh
vendor_sdk/: .env.example  DESIGN.md  GATEWAY.md  README.md  VENDOR_TESTING.md  pyproject.toml
vendor_sdk/examples/: call_gateway_pipeline.py  smoke_test.py
vendor_sdk/examples/cases/: shopping_actions.json  store_errands_multi_session.json
vendor_sdk/scripts/: run_demo_case.sh  run_tests.sh  start_gateway.sh
vendor_sdk/src/hms_vendor_sdk/: __init__.py  cli.py  client.py  gateway.py  models.py  organizer.py
vendor_sdk/tests/: test_client.py  test_gateway.py
(+737 files in other folders)
