[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hms-all-slim"
version = "0.6.1"
description = "HMS: Agent Memory That Works Like Human Memory - Slim All-in-One Bundle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hms-api-slim==0.6.1",
    "hms-client>=0.0.7",
    "hms-embed>=0.1.0",
]

[tool.uv.sources]
hms-api-slim = { workspace = true }
hms-client = { workspace = true }
hms-embed = { workspace = true }

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
