[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hms-all"
version = "0.6.1"
description = "HMS: Agent Memory That Works Like Human Memory - All-in-One Bundle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hms-api-slim[all]==0.6.1",
    "hms-client>=0.0.7",
    "hms-embed>=0.1.0",
]

[tool.uv.sources]
hms-api-slim = { workspace = true }
hms-client = { workspace = true }
hms-embed = { workspace = true }

[project.optional-dependencies]
local-llm = [
    "hms-api-slim[local-llm]==0.6.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hms"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
