[project]
name = "hms-agno"
version = "0.4.19"
description = "Agno integration for HMS - persistent memory tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "HMS", email = "support@hms.local" }
]
keywords = [
    "ai",
    "memory",
    "agno",
    "agents",
    "hms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "agno",
    "hms-client>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/hms-memory/hms"
Documentation = "https://github.com/hms-memory/hms/tree/main/interface/adapters/agno"
Repository = "https://github.com/hms-memory/hms"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hms_agno"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]
