[project]
name = "hms-llamaindex"
version = "0.1.4"
description = "LlamaIndex integration for HMS - persistent memory for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "HMS", email = "support@hms.local" }
]
keywords = [
    "ai",
    "memory",
    "llamaindex",
    "llama-index",
    "agents",
    "hms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "llama-index-core>=0.11.0",
    "hms-client>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/hms-memory/hms"
Documentation = "https://github.com/hms-memory/hms/tree/main/interface/adapters/llamaindex"
Repository = "https://github.com/hms-memory/hms"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hms_llamaindex"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]
