[project]
name = "hms-pydantic-ai"
version = "0.4.20"
description = "Pydantic AI integration for HMS - persistent memory tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "HMS", email = "support@hms.local" }
]
keywords = [
    "ai",
    "memory",
    "pydantic-ai",
    "agents",
    "hms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic-ai-slim>=1.0.0",
    "hms-client>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/hms-memory/hms"
Documentation = "https://github.com/hms-memory/hms/tree/main/interface/adapters/pydantic-ai"
Repository = "https://github.com/hms-memory/hms"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hms_pydantic_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]
